@@ -3,6 +3,7 @@ v1.1.7.?
 - xxm.xml update on project failing to load is read automatically (needed a restart before)
 - 'embed HTML syntax': now supports start characters e.g. <p>>=i<</p> instead of <p>[[=i]]</p>
 - xxmProject include unit files dialog supports multi-select
+- xxmIsapi: fixed Redirect with https
 
 v1.1.6.288
 - security: EOL's in added header fields are disallowed
